--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,14 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: php artisan serve --host=0.0.0.0 --port=8000
+    command: >
+      /bin/sh -lc "
+        composer install --no-interaction --prefer-dist --no-progress &&
+        if [ ! -f .env ] && [ -f .env.example ]; then cp .env.example .env; fi &&
+        php artisan key:generate --force || true &&
+        php artisan migrate --force &&
+        php artisan serve --host=0.0.0.0 --port=8000
+      "
     restart: unless-stopped
 
   frontend:
