--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,5 +121,17 @@ services:
       sh -lc "npm install && (npm run dev || npm start)"
     restart: unless-stopped
 
+  stt-service:
+    build:
+      context: ./transcriber/stt-service
+      dockerfile: Dockerfile
+    container_name: alignpath-stt
+    ports:
+      - "8001:8001"
+    environment:
+      STT_MODEL: base
+      STT_COMPUTE: int8
+    restart: unless-stopped
+
 volumes:
   db_data: {}
